--- a/themes/luci-theme-bootstrap-mod/luasrc/view/themes/bootstrap_mod/footer.htm
+++ b/themes/luci-theme-bootstrap-mod/luasrc/view/themes/bootstrap_mod/footer.htm
@@ -11,7 +11,7 @@
 %>
 
    <footer>
-    <a href="https://github.com/Lienol/openwrt-luci">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> / <%= ver.distversion %>
+    <a href="https://github.com/luckyyyyy/openwrt-luci">Powered by <%= ver.luciname %> (<%= ver.luciversion %>)</a> / <%= ver.distversion %>
     <ul class="breadcrumb pull-right" id="modemenu" style="display:none"></ul>
    </footer>
   </div>
@@ -41,7 +41,7 @@
 			luci_username[0].parentElement.parentElement.children[0].style.display = "none";
 			luci_password[0].parentElement.parentElement.classList.add('luci_password_div');
 			luci_password[0].parentElement.parentElement.children[0].style.display = "none";
-			
+
 			var errorbox = document.getElementsByClassName("errorbox");
 			var alert_message = document.getElementsByClassName("alert-message");
 			if (errorbox.length == 1) {
